<resources>
    <string name="app_name">LabQuiz</string>

    <string name="preference_user_key">com.example.lab03</string>
    <string name="preference_user_key_default">none</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="action_search">Buscar</string>

    <string name="my_curso">Estudiantes</string>
    <string name="my_profesor">Profesores</string>

    <string name="labelACurso">Datos de Estudiante</string>
    <string name="labelAProfesor">Datos de Profesor</string>

    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="actionConsulta">Retirar Curso asignado</string>
    <string name="actionAsignar">Asignar Cursos</string>

    <!--Formulario Update Curso-->
    <string name="tvTituloUpdateCurso">Actualización Curso</string>
    <string name="tvCodigo">Id:</string>
    <string name="tvCodCarrera">Código de Carrera:</string>
    <string name="tvNombre">Nombre:</string>
    <string name="tvCreditos">Apellidos: </string>
    <string name="tvAnio">Año:</string>
    <string name="tvCiclo">Ciclo:</string>
    <string name="tvHorasSemanales">Horas semanales:</string>
    <string name="tvProfesor">Profesor:</string>
    <string name="etEdad">Edad</string>

    <string name="etCodigo">Ced</string>
    <string name="etNombre">Nombre</string>
    <string name="etCreditos">Apellidos</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navegador">Navegador</string>
</resources>
