<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateEstudiante">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/labelACurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelACurso"
                android:textSize="18sp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:textStyle="normal|bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="52dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/estudiante" />
        </LinearLayout>

        <EditText
            android:id="@+id/etCedU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/etCodigo"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/tvCodigo"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloUpdateCurso" />

        <EditText
            android:id="@+id/etNombreU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/etNombre"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/tvNombre"
            app:layout_constraintTop_toBottomOf="@+id/etCodigo" />

        <EditText
            android:id="@+id/etApellidosU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/etCreditos"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/tvCreditos"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />


        <EditText
            android:id="@+id/etEdadU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/etEdad"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/tvHorasSemanales"
            app:layout_constraintTop_toBottomOf="@+id/etCiclo" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addEst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:src="@drawable/ic_check"
            android:tint="@android:color/background_light"
            app:backgroundTint="@color/bg_row_background"
            tools:layout_editor_absoluteX="319dp"
            tools:layout_editor_absoluteY="547dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>